Add database configuration to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=lf08_store
+spring.datasource.url=jdbc:postgresql://localhost:5432/lf08_store
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
