--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+  statuses: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -29,12 +35,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up JDK
+    - name: Set up JDK 24
       uses: actions/setup-java@v4
+      id: setup-java-24
+      continue-on-error: true
       with:
         java-version: '24'
         distribution: 'temurin'
         check-latest: true
+
+    - name: Set up JDK 21 (fallback)
+      uses: actions/setup-java@v4
+      if: steps.setup-java-24.outcome == 'failure'
+      with:
+        java-version: '21'
+        distribution: 'temurin'
 
     - name: Cache Gradle packages
       uses: actions/cache@v4
@@ -56,7 +71,8 @@ jobs:
 
     - name: Generate test report
       uses: dorny/test-reporter@v1
-      if: success() || failure()
+      if: (success() || failure()) && github.event_name != 'pull_request'
+      continue-on-error: true
       with:
         name: Test Results
         path: build/test-results/test/*.xml
