Add currency support for articles and implement conversion feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/lf08_store
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
+
+currency.api.key=${CURRENCY_API_KEY:test-key-for-ci}
